# crocheteer

./: .gitignore  .gitmodules  Cargo.toml  README.md  solution.txt
CloudCompare/: .gitignore  cloud_compare_normals.bat
assets/shaders/: link.wgsl
client/: bun.lockb  index.html  package-lock.json  package.json
client/src/: PlushieBody.ts  PlushieRenderer.ts  Scene.ts  World.ts  comms.ts  dragging.ts  gui.ts  main.ts  messages.d.ts  render3d.ts  style.css
client/src/leftPanel/: demoPattern.txt  editor.ts  panel.ts  patternEditor.ts
client/src/types/: messages.d.ts  monaco-themes.d.ts  monaco.d.ts
client/src/utils/: create.ts  download.ts  tooltip.ts
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/crochet/: Cargo.toml
crates/crochet/src/: errors.rs  lib.rs  params.rs  plushie_definition.rs  simulated_plushie.rs  tests.rs
crates/crochetlib/: Cargo.toml
crates/egui_console/: Cargo.toml  LICENSE
crates/egui_console/src/: console.rs  lib.rs  tab.rs
docs/: Checkpoint.md  Comparison.md  Concept.md  Draft.md  Experiment workflow.md  Genetic.md  Hook.md  Literature.md  MultiParts.md  Pattern grammar.md  Simulation.md  TODO  TODO.md  Visualization.md
docs/archive/: Concept.md  Experiment workflow.md  Genetic.md  Hook.md  Literature.md  Loading arbitrary STL.md  PerRound.md
docs/draft/: 0_Main.md  1_Introduction.md  2_Crocheting.md  3_Pattern as a formal language.md  4_Representing connected stitches as a graph.md  5_Force directed graph.md  5_Skeleton.md  Draft.md  Formal language for amigurumi patterns.md  abstrakty.txt
docs/examples of patterns/: another convention  crab  triceratops  triceratops2  turtle
evolver/: .gitignore  setup.py
evolver/population/interesting/: causes_centroid_has_no_points_assigned.json
evolver/src/: communication.py  example.py  genetic.py  main.py
examples/: basic.rs  code_highlight_features.rs  connected_parts.rs  frog.rs  grzib.rs  grzib_no_slf.rs  one_by_one.rs  sewn_parts.rs  sewn_parts_one_by_one.rs  slst.rs  unconnected_parts.rs
model_preprocessing/: README.md  grzib40cloud.json  preprocess.py  requirements.txt
model_preprocessing/models/: disk.json  disk.stl  pillar.json  pillar.stl
models/: grzib.stl  grzib10cloud1000.json  grzib40.stl  grzib40cloud1000.json  grzib5cloud1000.json  grzob.json  heart.stl  horn.stl  sphere.stl
pattern_designer/: vase.protopat.txt  vase_labels.protopat.txt
patterns/: Y.pat.txt  attach_testing_y.pat.txt  beerhat.pat.txt  blob.yaml  dense_region.yaml  diamond_3.yaml  dino.pat.txt  dude.txt  experimental_heart.txt  grzib.pat.txt  heart.txt  longmushroom.pat.txt  longmushroom_bare.pat.txt  small_heart.txt  test.pat.txt  test.txt  tree.pat.txt  vase.pat.txt  vase2.pat.txt  vjik.pat.txt  with_subpatterns.pat.txt  with_subpatterns.txt
patterns/unsupported_yet/: heart.pat.txt  heart_concept_2.txt  heart_wip.txt  tahm.pat.txt  tree.pat.txt
population/: big_ball.pop  heart.pop  out-big_ball.yaml  out-heart.yaml  out-small_ball.txt  out-small_ball.yaml  small_ball.pop
src/: args.rs  camera.rs  common.rs  cursor_ray.rs  lib.rs  main.rs  meshes.rs  meshes_sandbox.rs  project.rs  rocket_server.rs  websocket.rs
src/acl/: actions.rs  ergoflow.rs  mod.rs  simple_flow.rs
src/acl/pest_parser/: ACL.pest  errors.rs  mod.rs  parsing.rs
src/benchmark/: ball_generated.stl  bench_1_1.rs  bench_balls.rs  bench_heart.rs  big_ball_generated.stl  heart_generated.stl  mod.rs  small_ball.stl  small_ball_generated.stl  util.rs
src/comparison/: mod.rs
src/comparison/rstarcomp/: mod.rs
src/flow/: actions.rs  ergoflow.rs  mod.rs  simple_flow.rs
src/flow/human_flow/: mod.rs  pattern.rs
src/flow/pest_parser/: errors.rs  mod.rs  parsing.rs  pat.pest
src/genetic/: common.rs  evolution.rs  execution.rs  fitness_funcs.rs  growing.rs  mod.rs  params.rs  problem.rs  shape.rs
src/genetic/problem/: mod.rs
src/genetic/shapes/: comparison_naive.rs  mod.rs  (+1 more)
src/pattern/: builder.rs  construction.rs  genetic.rs  human_readable.rs  mod.rs  protopattern.rs  stitches.rs
src/plushie/: animation.rs  centroid_stuffing.rs  config.rs  construction.rs  conversions.rs  data.rs  display_mode.rs  examples.rs  mod.rs  mouse_interactions.rs  nodes.rs  params.rs  per_round_stuffing.rs  points.rs  shaders.rs  spawning.rs  stuffing.rs  systems.rs
src/plushie2/: construction.rs  examples.rs  nodes.rs
src/rocket_server/: rank.rs
src/skeletonization/: growing.rs  initial_cross_sections.rs  local_surface_normals.rs  mod.rs  part_selection.rs  utils.rs
src/state/: editor_simulation_sync.rs  mod.rs  simulated_plushie.rs
src/traits/: mod.rs  plushie.rs
src/ui/: action_item.rs  charts.rs  code_editor.rs  console.rs  control_panel.rs  data.rs  input_capture.rs  menu_bar.rs  mod.rs  simulation_state.rs  ui_used_input.rs  utils.rs
src/visualization/: mod.rs
src/ws_sim/: ball_sim.rs  mod.rs  plushie_sim.rs  sim.rs  tokens.rs
vault/: Concept.md  Visualization.md
visualization/: index.html  script.js
visualization/vite-project/: index.html  init.js  main.js  package-lock.json
ws_web_client/: index.html  package-lock.json  package.json  style.css  ui.js
ws_web_client/script/: create.js  init.js  main.js  plushie.js  simulation.js  websocket.js
ws_web_client/simulation/: ball.js  graph.js  main.js  plushie.js  simulation.js
(+158 files in other folders)
