[package]
name = "crocheteer"
version = "0.0.1"
edition = "2024"

[workspace]
members = [
    # crochet algorithms
    "crates/crochet",
    # fork to change control scheme TODO init submodule
    "crates/bevy_editor_cam",
    # fork for semantic highlighting TODO init submodule
    "crates/egui_code_editor",
]
resolver = "2"

[workspace.dependencies]
glam = "0.30.10" # should be same as used by bevy

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_editor_cam = { path = "crates/bevy_editor_cam", default-features = false } # disabling default features because skybox was causing ambiguities in Update schedule, fork to change control scheme
bevy_egui = "0.38"                                                              # GUI
bevy_framepace = "0.20"                                                         # FPS management
bevy_infinite_grid = "0.17"
crochet = { path = "crates/crochet" }
egui_code_editor = { path = "crates/egui_code_editor" }                         # fork for semantic highlighting
indoc = "2.0.7"                                                                 # multiline strings with indentation matching to code

[profile.dev]
opt-level = 1 # enable bevy dynamic linking

[profile.dev.package."*"]
opt-level = 3 # enable bevy dynamic linking
