[package]
name = "crocheteer"
version = "0.0.1"
edition = "2024"

[workspace]
members = [
    "crates/crochet",
    "crates/bevy_editor_cam",  # fork to change control scheme (TODO make controls configurable)
    "crates/egui_code_editor", # fork for semantic highlighting
    "crates/egui_console",     # fork to remove dependency bloat (why was eframe a dependency? they probably just wanted it as a dev-dependency)
]
resolver = "2"

[workspace.dependencies]
glam = "0.30.10" # should be same as used by bevy

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_editor_cam = { path = "crates/bevy_editor_cam", default-features = false } # disabling default features because skybox was causing ambiguities in Update schedule
bevy_egui = "0.38"                                                              # GUI
bevy_framepace = "0.20"                                                         # FPS management
bevy_infinite_grid = "0.17"
crochet = { path = "crates/crochet" }                                           # ACL parsing (ACL = domain-specific language for crochet)
egui_code_editor = { path = "crates/egui_code_editor" }
indoc = "2.0.7"                                                                 # multiline strings with indentation matching to code
egui_console = { path = "crates/egui_console" }

[profile.dev]
opt-level = 1 # enable bevy dynamic linking

[profile.dev.package."*"]
opt-level = 3 # enable bevy dynamic linking
